--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <div class="skill-row">
               <img class="chillies-img" src="images/chillies.png" alt="skils2">
               <h3>
-                 Hot Wings Chanllenge
+                 Hot Wings Challenge
               </h3>
               <p class="code-discrp">
-                  But my best skill is actually n eating hot wings. I am the undisputed king of hot wing challenge. Ghost pepper and hot baffalo wings are my favourite.
+                  But my best skill is actually eating hot wings. I am the undisputed king of hot wing challenge. Ghost pepper and hot baffalo wings are my favourite.
               </p>
            </div>
 
